--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -1,13 +1,13 @@
 #style-8::-webkit-scrollbar-track {
-    border: 1px solid black;
-    background-color: #fffbeb;
+    border: 1px solid #22c55e;
+    background-color: #09090b;
 }
 
 #style-8::-webkit-scrollbar {
     width: 5px;
-    background-color: #fffbeb;
+    background-color: #09090b;
 }
 
 #style-8::-webkit-scrollbar-thumb {
-    background-color: #000000;
+    background-color: #22c55e;
 }
