--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,26 +4,19 @@
 @media screen and (min-width: 640px) {
   /* Customize the scrollbar track */
   .scroll-bar::-webkit-scrollbar-track {
-    background-color: #f1f1f1;
-    border-radius: 10px;
+    background: #ebebfb;
+    border-radius: 100px;
   }
 
   /* Customize the scrollbar itself */
   .scroll-bar::-webkit-scrollbar {
-    width: 8px;
-    height: 10px;
+    width: 12px;
   }
 
   /* Customize the scrollbar thumb */
   .scroll-bar::-webkit-scrollbar-thumb {
-    background-color: #7e22ce;
-    border-radius: 10px;
-    transition: background-color 0.3s;
-    height: 10px;
-  }
-
-  /* Change the thumb color on hover */
-  .scroll-bar::-webkit-scrollbar-thumb:hover {
-    background-color: #7e22ce;
+    background-color: rgb(126 34 206);
+    border-radius: 100px;
+    border: 4px solid #ebebfb;
   }
 }
